--- a/content/appointment/_index.Rmd
+++ b/content/appointment/_index.Rmd
@@ -4,10 +4,38 @@ header:
   image: ""
 title: Bóka ráðgjöf
 view: 3
+css: style.css
 ---
-'Vinstamlegast fáið ykkur kaffi
 
-<!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/bgj2/laeknagardur" style="min-width:320px;height:1200px;"></div>
+Þetta er Rmarkdownskjal og við getum skrifað texta hér eins og okkur sýnist.
+
+```{r, echo = FALSE}
+htmltools::HTML('
+<div class="tabs">
+  <div class="tab">
+    <input type="radio" id="tab-1" name="tab-group-1" checked>
+    <label for="tab-1">Læknagarður</label>
+    <div class="content">
+      <p>
+      
+      <div class="calendly-inline-widget" data-url="https://calendly.com/bgj2/laeknagardur?primary_color=005687" style="min-width:100px;height:1800px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-<!-- Calendly inline widget end -->
+      
+      </p>
+    </div>
+  </div>
+  <div class="tab">
+    <input type="radio" id="tab-2" name="tab-group-1">
+    <label for="tab-2">Íslensk erfðagreining</label>
+    <div class="content">
+      <p>
+
+<div class="calendly-inline-widget" data-url="https://calendly.com/bgj2/islenskerfdagreining?primary_color=00588c" style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+      
+      </p>
+    </div>
+  </div>
+</div>')
+```
+
