--- a/content/appointment/_index.Rmd
+++ b/content/appointment/_index.Rmd
@@ -16,6 +16,19 @@ knitr::opts_chunk$set(echo = FALSE, out.width = "90%")
 ```
 
 
+# Fjarfundir vegna COVID-19
+
+```{r}
+blogdown::shortcode("boka_fjarfundur")
+```
+
+Vegna COVID faraldurs eru öll viðtöl okkar á formi fjarfunda. Bókið tíma og við munum senda fundarboð í Microsoft Teams. 
+
+[Hér má sjá teams ráð í boði Upplýsingatækvisviðs](https://uts.hi.is/teams_fjarfundir)
+
+
+
+<!-- 
 # Læknagarður
 
 ```{r}
@@ -48,3 +61,5 @@ blogdown::shortcode("boka_decode")
 Hér geta framhaldsnemendur og starfsfólk sem eru nú þegar til húsa í Íslenskri Erfðagreiningu bókað tíma. Ráðgjöfin er almennt séð staðsett hjá Miðstöð í Lýðheilsuvísindum en getur farið fram hvar sem er í byggingunni.
 
 * Mánudagar: 09:00 - 14:00
+
+-->
